--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,11 @@
 <div class="ui grid">
-  <div class="row">
-    <div class="">
+  <div class="sixteen wide column">
+    <div class="ui horizontal segment">
+      <div class="ui purple message">
+      <%= semantic_icon(:facebook, :large,  :float_right, :green) %>
+      <p class="header alpha center">A sample header</p>
+      <p>some sample content</p>
+      </div>
     </div>
   </div>
 </div>
