textilate breaks on more dynamic txt

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,9 +2,10 @@
   <div class="sixteen wide column">
     <div class="ui horizontal segment">
       <div class="ui purple message">
-      <%= semantic_icon(:facebook, :large,  :float_right, :green) %>
-      <p class="header alpha center">A sample header</p>
-      <p>some sample content</p>
+      <p class="tlt header alpha center">Thanks for visiting!</p>
+      <p class="">VerumDesigns is a creative collaboration between <a>@Ilia Reingold </a>
+       and <a>@Greg Merrit</a>. It's our ambition to release premium, high quality graphic shirts. Our strategy is release a lightweight, voting-based site, where our users and beloved fans can cast their pick for our next run of production.</p>
+       <p class="center">Let us know which ones you like!</p>
       </div>
     </div>
   </div>
