animations are working lol

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,9 +3,9 @@
     <div class="ui horizontal segment">
       <div class="ui purple message">
       <p class="tlt header alpha center">Thanks for visiting!</p>
-      <p class="">VerumDesigns is a creative collaboration between <a>@Ilia Reingold </a>
+      <p class="fademein">VerumDesigns is a creative collaboration between <a>@Ilia Reingold </a>
        and <a>@Greg Merrit</a>. It's our ambition to release premium, high quality graphic shirts. Our strategy is release a lightweight, voting-based site, where our users and beloved fans can cast their pick for our next run of production.</p>
-       <p class="center">Let us know which ones you like!</p>
+       <p class="fademein center">Let us know which ones you like!</p>
       </div>
     </div>
   </div>
