progress on some animations

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,10 +2,41 @@
   <div class="sixteen wide column">
     <div class="ui horizontal segment">
       <div class="ui purple message">
-      <p class="tlt header alpha center">Thanks for visiting!</p>
-      <p class="fademein">VerumDesigns is a creative collaboration between <a>@Ilia Reingold </a>
-       and <a>@Greg Merrit</a>. It's our ambition to release premium, high quality graphic shirts. Our strategy is release a lightweight, voting-based site, where our users and beloved fans can cast their pick for our next run of production.</p>
-       <p class="fademein center">Let us know which ones you like!</p>
+        <p class="tlttop header alpha center">Thanks for visiting!</p>
+        <p class="fademein2">VerumDesigns is a creative collaboration between <a href="https://www.facebook.com/ilia.reingold" target="_blank">@Ilia Reingold </a>
+         and <a href="https://www.facebook.com/greg.merritt.75" target="_blank">@Greg Merritt</a>. It's our ambition to release premium, high quality graphic shirts. Our strategy is release a lightweight, voting-based site, where our users and beloved fans can cast their pick for our next run of production.</p>
+         <p class="fademein3 center">Let us know which ones you like!</p>
+       </div>
+     </div>
+   </div>
+   <div class="row">
+    <div class="four wide column">
+      <div class="ui card green message">
+        <div class="row" id="headshot_bg">
+          <%= image_tag("greg.png", class: "ui centered tiny circular image") %>
+        </div> 
+        <div class="content">    
+          <div class="header tltleft">Greg Merritt</div>
+          <div class="meta">
+            <span class="date fademein2">Artist</span>
+          </div>
+          <div class="right description fademein3">
+            Hi, I drew by hand all the pictures you see on the right. Would you wear any of these on a shirt?
+          </div>
+        </div>
+        <div class="extra content">
+          <%= semantic_icon(:mail, :float_right) %>
+          <%= semantic_icon(:facebook, :float_right) %>
+        </div>
+      </div>
+    </div>
+    <div class="twelve wide column">
+      <div class="ui green message">
+
+
+        <%= image_tag("drawing1.jpg", id: "gasmask", class: "ui image medium") %>
+
+
       </div>
     </div>
   </div>
