--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="ui fluid item menu">
   <div class="borderless item">
-    <%= image_tag("vd3.png") %>
+  <a href="https://www.facebook.com/verumdesigns" target="_blank"><%= image_tag("vd3.png") %></a>
   </div>
 </div>
 
