--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DigitalOcean Rails Application</title>
+  <title>Verum Designs</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= render "layouts/header" %>
-<div class="pusher">
-<%= yield %>
-</div>
-
+  <%= render "layouts/header" %>
+  <div class="pusher">
+    <%= yield %>
+    </div>
 </body>
 </html>
