finally got the bottom sidebar lol

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
 </head>
 <body>
   <%= render "layouts/header" %>
+  <%= render "layouts/botbar" %>
   <div class="pusher">
     <%= yield %>
-    </div>
+  </div>
+  
 </body>
 </html>
