--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -5,3 +5,11 @@ $faintgreen: complement($faintpurple);
 #headshot_bg {
   //background-color: ;
 }
+
+.ui.card {
+  margin-left: 21px;
+}
+
+#gasmask {
+  
+}
