--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
      </div>
    </div>
    <div class="row">
-    <div class="four wide column">
+    <div class="five wide column">
       <div class="ui card green message">
         <div class="row" id="headshot_bg">
           <%= image_tag("greg.png", class: "fademein2 ui centered tiny circular image") %>
@@ -29,13 +29,33 @@
           <%= semantic_icon(:facebook, :float_right) %>
         </div>
       </div>
+      <div class="ui card green message">
+        <div class="row" id="headshot_bg">
+          <%= image_tag("ilia.png", class: "fademein2 ui centered tiny circular image") %>
+        </div> 
+        <div class="content">    
+          <div class="header tltleft">Ilia Reingold</div>
+          <div class="meta">
+            <span class="date fademein2">Developer</span>
+          </div>
+          <div class="right description fademein3">
+            Hey, I'm the creator of this site. Like it? Got any suggestions? Reach out to me!
+          </div>
+        </div>
+        <div class="extra content">
+          <i id="ilias-email" class="mail icon float-right"></i>
+          <%= semantic_icon(:facebook, :float_right) %>
+          <%= semantic_icon(:twitter, :float_right) %>
+        </div>
+      </div>
     </div>
     <div class="eight wide column">
       <div class="ui horizontal green segment">
-       <div class="center header">Image Title</div>
-       <div class="left content">
-       <%= image_tag("drawing1.jpg", id: "gasmask", class: "fademein3 ui image medium") %>
+       <div class="center header"><%= @design.name %></div>
+       <div class="content">
+         <%= image_tag(@design.image, id: "gasmask", class: "fademein3 ui image") %>
        </div>
-    </div>
-  </div>
-</div>
+     </div>
+   </div>
+ </div>  
+ 
