--- a/app/views/layouts/_botbar.html.erb
+++ b/app/views/layouts/_botbar.html.erb
@@ -1,38 +1,13 @@
-<div class="ui bottom demo inverted nine item labeled icon sidebar menu overlay visible">
+<div class="ui bottom demo inverted three item labeled icon sidebar menu overlay visible">
   <a class="item">
-    <i class="home icon"></i>
-    Home
+    <i class="star icon"></i>
+    I would buy this!
   </a>
   <a class="item">
-    <i class="block layout icon"></i>
-    Topics
+    <%= @design.name %>
   </a>
   <a class="item">
-    <i class="smile icon"></i>
-    Friends
-  </a>
-  <a class="item">
-    <i class="calendar icon"></i>
-    History
-  </a>
-  <a class="item">
-    <i class="mail icon"></i>
-    Messages
-  </a>
-  <a class="item">
-    <i class="chat icon"></i>
-    Discussions
-  </a>
-  <a class="item">
-    <i class="trophy icon"></i>
-    Achievements
-  </a>
-  <a class="item">
-    <i class="shop icon"></i>
-    Store
-  </a>
-  <a class="item">
-    <i class="settings icon"></i>
-    Settings
+    <i class="heart icon"></i>
+    I love this design.
   </a>
 </div>
