--- a/app/views/layouts/_botbar.html.erb
+++ b/app/views/layouts/_botbar.html.erb
@@ -1,8 +1,8 @@
-<div class="ui bottom demo inverted three item labeled icon sidebar menu overlay visible">
-  <a class="item">
+<div class="ui bottom demo inverted two item labeled icon sidebar menu overlay visible">
+  <!-- <a class="item">
     <i class="star icon"></i>
     I would buy this!
-  </a>
+  </a> -->
   <a class="item">
     <%= @design.name %>
   </a>
