going for another approach

--- a/app/views/layouts/_botbar.html.erb
+++ b/app/views/layouts/_botbar.html.erb
@@ -4,10 +4,15 @@
     I would buy this!
   </a> -->
   <a class="item">
+    <%= semantic_icon(:wrench) %>
     <%= @design.name %>
-  </a>
+  </a> 
   <a class="item">
-    <i class="heart icon"></i>
+    <i class="heart icon">
+    <p style="float:right;">
+        lol
+      </p>
+    </i>
     I love this design.
   </a>
 </div>
