need to work on red hover, dynamic style

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -14,8 +14,15 @@
         <%= image_tag("https://s3.amazonaws.com/verumdesigns/imgs/ror2.png", class: "pulse-hover ui image fademein2 centered") %>
       </div>
       <div class="six wide column">  
-        <div class="ui red segment">
-          Rails is awesome
+        <div style="margin-top:1.4em;" class="ui red segment">
+          <p class="ui center header">
+            We'll Build Your Dreams...because:
+          </p>
+          <div class="ui bulleted list">
+            <div class="item">Rails is superb for lightning fast prototyping</div>  
+            <div class="item">A robust, active community contributes open source code</div>  
+            <div class="item">Support for unit and integration testing, which means code quality can be near perfect, with zero bugs</div>  
+          </div>  
         </div>  
       </div>
   </div>  
