--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="borderless item">
     <%= image_tag("vd3.png", class: "ui image small") %>
   </div>
-  <a data-tooltip="Under Construction" class="tooltip item">
+  <a class="item">
     Blog
     <%= semantic_icon(:pencil) %>
   </a>
