nice progress on the front page buddy, keep it up!

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,29 +1,86 @@
 <div class="ui grid">
   <div class="red row">
-  <div class="sixteen wide column">  
-    <h1 class="tlt center">
-      Verum Designs is a devoted Ruby on Rails agency
-    </h1>
+    <div class="sixteen wide column">  
+      <h1 class="tlt center">
+        Verum Designs is a devoted Ruby on Rails agency
+      </h1>
     </div>
     <h5 class="tltleft center">
       We're located in Toronto, ON!
     </h5>
   </div>
   <div class="row">
-      <div class="eight wide column">  
-        <%= image_tag("https://s3.amazonaws.com/verumdesigns/imgs/ror2.png", class: "pulse-hover ui image fademein2 centered") %>
-      </div>
-      <div class="six wide column">  
-        <div style="margin-top:1.4em;" class="ui red segment">
-          <p class="ui center header">
-            We'll Build Your Dreams...because:
-          </p>
-          <div class="ui bulleted list">
-            <div class="item">Rails is superb for lightning fast prototyping</div>  
-            <div class="item">A robust, active community contributes open source code</div>  
-            <div class="item">Support for unit and integration testing, which means code quality can be near perfect, with zero bugs</div>  
-          </div>  
+    <div class="eight wide column">  
+      <%= image_tag("https://s3.amazonaws.com/verumdesigns/imgs/ror2.png", class: "pulse-hover ui image fademein2 centered") %>
+    </div>
+    <div class="six wide column">  
+      <div style="margin-top:1.4em;" class="ui red segment">
+        <p class="ui center header">
+          We'll Build Your Dreams
+        </p>
+        <div class="ui list">
+          <div class="item"><%= semantic_icon(:lightning) %> Rails is superb for lightning fast prototyping</div>  
+          <div class="item"><%= semantic_icon(:sitemap) %> A robust, active community contributes open source code</div>  
+          <div class="item"><%= semantic_icon(:wrench) %> High quality test-driven development support</div>  
         </div>  
       </div>
-  </div>  
+      <div class="ui message">
+        <div class="header">
+          Email us: 
+        </div>
+        <div class="content">
+          pending
+        </div>    
+      </div>
+      <div class="ui message">
+        <div class="header">
+           
+        </div>
+        <div class="content">
+          pending
+        </div>    
+      </div>  
+    </div>
+  </div>
+  <div class="green row">
+    <div class="sixteen wide column">
+      <div class="ui message green">
+        <div class="ui center header">
+          Our Specialities
+        </div>  
+      </div>  
+    </div>  
+  </div>
+  <div class="green row">
+    <div class="five wide column">
+
+      <div class="ui card">
+        <div class="linux_graph">
+          
+        </div>  
+        <div class="content">
+        <a class="header">Linux</a>
+          <div class="meta">
+            <span class="date">SSD Hosting & sysadmin</span>
+          </div>
+          <div class="description">
+            working hard
+          </div>
+        </div>
+        <div class="extra content">
+          <a>
+            <i class="linux icon"></i>
+            We're Ubuntu lovers here
+          </a>
+        </div>
+      </div>
+
+    </div>
+    <div class="five wide column">
+      lol
+    </div>
+    <div class="five wide column">
+      try
+    </div>  
+  </div>      
 </div>
