need to generate animations via function

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -32,13 +32,13 @@
           pending
         </div>    
       </div>
-      <div class="ui message">
-        <div class="header">
-           
-        </div>
-        <div class="content">
-          pending
-        </div>    
+      <div class="ui two item menu">
+      <div id="_fb" class="item">
+          <%= semantic_icon(:facebook) %>
+        </div>  
+        <div class="item">
+          <%= semantic_icon(:twitter) %>
+        </div>  
       </div>  
     </div>
   </div>
@@ -56,10 +56,10 @@
 
       <div class="ui card">
         <div class="linux_graph">
-          
+
         </div>  
         <div class="content">
-        <a class="header">Linux</a>
+          <a class="header">Linux</a>
           <div class="meta">
             <span class="date">SSD Hosting & sysadmin</span>
           </div>
